# Scavenger

./: .gitignore  COMBINED_IMPLEMENTATION_SUMMARY.md  COMPILATION_STATUS.md  CONFIRM_WASTE_IMPLEMENTATION.md  Cargo.toml  DEACTIVATE_WASTE_IMPLEMENTATION.md  FINAL_SUMMARY.md  GET_ACTIVE_INCENTIVE_FOR_MANUFACTURER_IMPLEMENTATION.md  GET_INCENTIVE_BY_ID_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_GET_ACTIVE_INCENTIVE.md  INCENTIVE_IMPLEMENTATION_COMPLETE.md  ISSUE_37_SUMMARY.md  ISSUE_38_SUMMARY.md  ISSUE_47_IMPLEMENTATION.md  ISSUE_49_IMPLEMENTATION.md  ISSUE_50_IMPLEMENTATION.md  ISSUE_52_IMPLEMENTATION.md  LICENSE  PROJECT_SETUP.txt  PR_DESCRIPTION.md  PR_GET_INCENTIVE_BY_ID.md  QUICKSTART.txt  README.md  RESET_WASTE_CONFIRMATION_IMPLEMENTATION.md  TASK_COMPLETION_SUMMARY.md  TRANSFER_COLLECTED_WASTE_IMPLEMENTATION.md  UPDATE_INCENTIVE_IMPLEMENTATION.md  UPDATE_INCENTIVE_QUICK_REFERENCE.md  WASTETYPE_IMPLEMENTATION.txt  WASTE_REGISTERED_EVENT_IMPLEMENTATION.md  WASTE_REGISTERED_EVENT_SUMMARY.md  WASTE_REGISTERED_EVENT_USAGE.md  WASTE_STORAGE_IMPLEMENTATION_COMPLETE.md  soroban.toml
contracts/scavenger/: Cargo.toml  INCENTIVE_IMPLEMENTATION.md  README.md  TOKEN_REWARD_DISTRIBUTION.md
docs/: MATERIAL_TRACKING.txt  (+9 more)
stellar-contract/: Cargo.toml
stellar-contract/src/: events.rs  lib.rs  types.rs
stellar-contract/test_snapshots/: test_get_incentives_all_waste_types.1.json  test_get_incentives_already_sorted.1.json  test_get_incentives_empty_for_no_incentives.1.json  test_get_incentives_empty_when_all_deactivated.1.json  test_get_incentives_excludes_auto_deactivated.1.json  (+11 more)
(+54 files in other folders)
